fdo#50831 fix RTF export of direct run formatting for empty paragraphs

Change-Id: I5f0e7aefdea80bbb9cf61b991c5b706bd2023dfa