sw/source/filter/ww8/rtfattributeoutput.cxx
@@ -379,11 +379,13 @@ void RtfAttributeOutput::EndParagraphProperties()
     m_rExport.Strm() << m_aStyles.makeStringAndClear().getStr();
 }
 
-void RtfAttributeOutput::StartRun( const SwRedlineData* pRedlineData )
+void RtfAttributeOutput::StartRun( const SwRedlineData* pRedlineData, bool bSingleEmptyRun )
 {
     SAL_INFO("sw.rtf", OSL_THIS_FUNC);
 
-    m_aRun->append('{');
+    m_bSingleEmptyRun = bSingleEmptyRun;
+    if (!m_bSingleEmptyRun)
+        m_aRun->append('{');
 
     // if there is some redlining in the document, output it
     Redline( pRedlineData );
@@ -396,7 +398,8 @@ void RtfAttributeOutput::EndRun()
     SAL_INFO("sw.rtf", OSL_THIS_FUNC);
     m_aRun->append(m_rExport.sNewLine);
     m_aRun.appendAndClear(m_aRunText);
-    m_aRun->append('}');
+    if (!m_bSingleEmptyRun)
+        m_aRun->append('}');
 }
 
 void RtfAttributeOutput::StartRunProperties()
@@ -3025,7 +3028,8 @@ RtfAttributeOutput::RtfAttributeOutput( RtfExport &rExport )
     m_bWroteCellInfo( false ),
     m_bHadFieldResult( false ),
     m_bTableRowEnded( false ),
-    m_aCells()
+    m_aCells(),
+    m_bSingleEmptyRun(false)
 {
     SAL_INFO("sw.rtf", OSL_THIS_FUNC);
 }
